Modify eslint rules (no-confusing-arrow).

--- a/js/.eslintrc.json
+++ b/js/.eslintrc.json
@@ -5,6 +5,9 @@
         "node": true
     },
     "extends": "airbnb",
+    "rules": {
+        "no-confusing-arrow": 1
+    },
     "globals": {
         "OT": true
     }
