--- a/js/package.json
+++ b/js/package.json
@@ -1,10 +1,13 @@
 {
   "name": "opentok-accelerator-core",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
-  "main": "dist/opentok-accelerator.js",
+  "main": "dist/core.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:node": "babel -d ./dist/ ./src/",
+    "build:browser": "browserify src/core.js -o browser/opentok-acc-core.js -t [ babelify --presets [ es2015 ] ] --im",
+    "build": "npm run build:node && npm run build:browser",
+    "test": "mocha test/test.js -R nyan"
   },
   "keywords": [
     "opentok",
@@ -18,6 +21,7 @@
   "license": "MIT",
   "devDependencies": {
     "babel-preset-es2015": "^6.16.0",
+    "babel-preset-es2015-script": "^1.1.0",
     "babelify": "^7.3.0",
     "eslint": "^3.5.0",
     "eslint-config-airbnb": "^11.1.0",
