Use individual wrapper methods. Export 'state' method.

--- a/js/.eslintrc.json
+++ b/js/.eslintrc.json
@@ -6,7 +6,8 @@
     },
     "extends": "airbnb",
     "rules": {
-        "no-confusing-arrow": 1
+        "no-confusing-arrow": 1,
+        "no-unused-expressions": 1
     },
     "globals": {
         "OT": true
