--- a/js/.eslintrc.json
+++ b/js/.eslintrc.json
@@ -7,7 +7,8 @@
     "extends": "airbnb",
     "rules": {
         "no-confusing-arrow": 1,
-        "no-unused-expressions": 1
+        "no-unused-expressions": 1,
+        "no-prototype-builtins": 1
     },
     "globals": {
         "OT": true
