--- a/js/react-sample-app/package.json
+++ b/js/react-sample-app/package.json
@@ -3,15 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.6.0"
+    "react-scripts": "*"
   },
   "dependencies": {
     "classnames": "^2.2.5",
     "opentok-annotation": "*",
-    "opentok-archiving": "^1.0.9",
-    "opentok-screen-sharing": "^1.0.17",
+    "opentok-archiving": "*",
+    "opentok-screen-sharing": "*",
     "opentok-solutions-css": "*",
-    "opentok-text-chat": "^1.0.16",
+    "opentok-text-chat": "*",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-spinner": "^0.2.6"
