--- a/js/package.json
+++ b/js/package.json
@@ -23,11 +23,15 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.16.0",
     "babelify": "^7.3.0",
+    "browserify": "^13.1.1",
     "eslint": "^3.5.0",
     "eslint-config-airbnb": "^11.1.0",
     "eslint-plugin-import": "^1.15.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.2.2",
+    "opentok-solutions-logging": "^1.0.6"
+  },
+  "dependencies": {
     "opentok-solutions-logging": "^1.0.6"
   }
 }
