--- a/react-sample-app/.gitignore
+++ b/react-sample-app/.gitignore
@@ -1,18 +1,1 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
-# dependencies
-node_modules
-
-#config
-src/config.json
-
-# testing
-coverage
-
-# production
-build
-
-# misc
-.DS_Store
-.env
-npm-debug.log
+config.json
