--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["es2015"],
-  "plugins": ["transform-object-assign"]
+  "plugins": ["transform-object-assign", "transform-promise-to-bluebird"]
 }
