--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "MIT",
   "devDependencies": {
     "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-plugin-transform-promise-to-bluebird": "^1.1.1",
     "babel-preset-es2015": "^6.16.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
@@ -34,6 +35,7 @@
     "eslint-plugin-react": "^6.9.0"
   },
   "dependencies": {
+    "bluebird": "^3.4.7",
     "opentok-solutions-logging": "^1.0.7"
   }
 }
