--- a/react-sample-app/package.json
+++ b/react-sample-app/package.json
@@ -15,7 +15,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-spinner": "^0.2.6",
-    "babel-polyfill:^6.23.0"
+    "babel-polyfill: "^6.23.0"
   },
   "scripts": {
     "start": "react-scripts start",
