--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:react-sample": "cp -r dist/* react-sample-app/src/ot-core/",
     "build:sdk-react-sample": "cp -r dist/* sdk-wrapper-react-sample-app/src/ot-core/",
     "build:js-sample": "cp browser/opentok-acc-core.js vanilla-js-sample-app/public/js/components/opentok-acc-core.js",
-    "build": "npm run build:node && npm run build:browser && npm run build:react-sample && npm run build:js-sample && npm run build:sdk-react-sample"
+    "build": "npm run build:node && npm run build:browser && npm run build:react-sample && npm run build:js-sample && npm run build:sdk-react-sample",
+    "test": "karma start"
   },
   "keywords": [
     "opentok",
@@ -23,14 +24,30 @@
   "author": "adrice727@gmail.com",
   "license": "MIT",
   "devDependencies": {
+    "babel-plugin-espower": "^2.3.2",
     "babel-preset-es2015": "^6.16.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
+    "chai": "^3.5.0",
     "eslint": "^3.14.1",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.9.0"
+    "eslint-plugin-react": "^6.9.0",
+    "karma": "^1.5.0",
+    "karma-browserify": "^5.1.1",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-html2js-preprocessor": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "mocha": "^3.2.0",
+    "opentok-annotation": "^2.0.53",
+    "opentok-archiving": "^1.0.19",
+    "opentok-screen-sharing": "^1.0.25",
+    "opentok-text-chat": "^1.0.29"
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
