Fixing travis script for correct deployment

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,9 @@ before_script:
 script:
 - npm test
 - if [[ "$TRAVIS_PULL_REQUEST" == "false" ]]; then
-    VERSION=$(jq '.version' package.json | sed -e 's/^"//' -e 's/"$//')
+    VERSION=$(jq '.version' package.json | sed -e 's/^"//' -e 's/"$//');
     git tag v$VERSION;
+    git commit -m "New build. Bump npm version.";
     git push --quiet https://$GITHUBKEY@github.com/opentok/accelerator-core-js v$VERSION;
   fi
 deploy:
