--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "eslint-plugin-react": "^6.9.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
+    "babel-polyfill": "*",
     "opentok-solutions-logging": "^1.0.7"
   }
 }
