clean temp file from build

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:node": "babel -d ./dist/ ./src/",
     "build:browser-polyfill": "(echo \"require('babel-polyfill');\\n\"; cat src/core.js) > src/browser-temp.js",
     "build:browser-browserify": "browserify src/browser-temp.js -o browser/opentok-acc-core.js -t [ babelify --presets [ es2015 ] ] --im",
-    "build:browser": "npm run build:browser-polyfill && npm run build:browser-browserify && rm src/browser-temp.js",
+    "build:browser": "npm run build:browser-polyfill && npm run build:browser-browserify && rm src/browser-temp.js dist/browser-temp.js",
     "build": "npm run build:node && npm run build:browser",
     "test": "karma start"
   },
