--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:browser-polyfill": "(echo \"require('babel-polyfill');\\n\"; cat src/core.js) > src/browser-temp.js",
     "build:browser-browserify": "mkdir -p browser && browserify src/browser-temp.js -o browser/opentok-acc-core.js -t [ babelify --presets [ es2015 ] ] --im",
     "build:browser": "npm run build:browser-polyfill && npm run build:browser-browserify && rm src/browser-temp.js",
-    "build": "npm run build:node && npm run build:browser",
+    "build:logversion": "replace '(js-vsol-)(x.y.z)' '$1'$npm_package_version dist/* browser/*",
+    "build": "npm run build:node && npm run build:browser && npm run build:logversion",
     "test": "karma start"
   },
   "keywords": [
@@ -34,7 +35,8 @@
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.9.0"
+    "eslint-plugin-react": "^6.9.0",
+    "replace": "^0.3.0"
   },
   "dependencies": {
     "opentok-solutions-logging": "^1.0.7"
