--- a/sample-app/package.json
+++ b/sample-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
+    "cpx": "^1.5.0",
     "eslint": "^3.17.1",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
@@ -11,8 +12,8 @@
     "react-scripts": "*"
   },
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "classnames": "^2.2.5",
-    "opentok-accelerator-core": "*",
     "opentok-annotation": "*",
     "opentok-archiving": "*",
     "opentok-screen-sharing": "*",
@@ -20,11 +21,11 @@
     "opentok-text-chat": "*",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-spinner": "^0.2.6",
-    "babel-polyfill": "^6.23.0"
+    "react-spinner": "^0.2.6"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "copywatch": "cpx \"../src/**\" src/ot-core --watch",
+    "start": "npm run copywatch & react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
