Fixing deployment process

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ before_install:
 - sh -e /etc/init.d/xvfb start
 before_script:
 - npm install
-- npm install --save-dev chai karma karma-chai karma-chrome-launcher karma-coverage
+- npm install chai karma karma-chai karma-chrome-launcher karma-coverage
   karma-firefox-launcher karma-html2js-preprocessor mocha karma-mocha karma-phantomjs-launcher
   karma-browserify babel-plugin-espower browserify
-- npm install --save-dev opentok-text-chat opentok-screen-sharing opentok-annotation
+- npm install opentok-text-chat opentok-screen-sharing opentok-annotation
   opentok-archiving
 script:
 - npm run build
