--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "*",
+    "babel-eslint": "^6.1.2",
     "babel-polyfill": "*",
     "babel-preset-es2015": "^6.16.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
-    "eslint": "^3.14.1",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
