--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build:node": "babel -d ./dist/ ./src/",
     "build:browser-polyfill": "(echo \"require('babel-polyfill');\\n\"; cat src/core.js) > src/browser-temp.js",
-    "build:browser-browserify": "mkdir -p browser && browserify src/browser-temp.js -o browser/opentok-acc-core.js -t [ babelify --presets [ es2015 ] ] --im",
+    "build:browser-browserify": "mkdir -p browser && browserify src/browser-temp.js -o browser/opentok-acc-core.js -t [ babelify --presets [ es2015 ] --plugins [ transform-class-properties ] ] --im",
     "build:browser": "npm run build:browser-polyfill && npm run build:browser-browserify && rm src/browser-temp.js",
     "build:logversion": "replace '(js-vsol-)(x.y.z)' '$1'$npm_package_version dist/* browser/*",
     "build": "npm run build:node && npm run build:browser && npm run build:logversion",
@@ -28,6 +28,7 @@
   "devDependencies": {
     "babel-cli": "*",
     "babel-eslint": "^6.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "*",
     "babel-preset-es2015": "^6.16.0",
     "babelify": "^7.3.0",
