--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 services:
   - xvfb
 before_install:
-- export CHROME_BIN = require('puppeteer').executablePath();
+- export CHROME_BIN=chromium-browser
 - export DISPLAY=:99.0
 script:
 - npm run build
