Initial move to TypeScript

--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "repository": "https://github.com/opentok/accelerator-core-js",
   "main": "dist/core.js",
   "scripts": {
-    "build:node": "babel -d ./dist/ ./src/",
-    "build:browser-polyfill": "(echo \"require('babel-polyfill');\\n\"; cat src/core.js) > src/browser-temp.js",
-    "build:browser-browserify": "mkdir -p browser && browserify src/browser-temp.js -o browser/opentok-acc-core.js -t [ babelify --presets [ es2015 ] --plugins [ transform-class-properties ] ] --im",
-    "build:browser": "npm run build:browser-polyfill && npm run build:browser-browserify && rm src/browser-temp.js",
-    "build:logversion": "replace '(js-vsol-)(x.y.z)' '$1'$npm_package_version dist/* browser/*",
-    "build": "npm run build:node && npm run build:browser && npm run build:logversion",
-    "test": "karma start"
+    "old:build:node": "babel -d ./dist/ ./src/",
+    "old:build:browser-polyfill": "(echo \"require('babel-polyfill');\\n\"; cat src/core.js) > src/browser-temp.js",
+    "old:build:browser-browserify": "mkdir -p browser && browserify src/browser-temp.js -o browser/opentok-acc-core.js -t [ babelify --presets [ es2015 ] --plugins [ transform-class-properties ] ] --im",
+    "old:build:browser": "npm run build:browser-polyfill && npm run build:browser-browserify && rm src/browser-temp.js",
+    "old:build:logversion": "replace '(js-vsol-)(x.y.z)' '$1'$npm_package_version dist/* browser/*",
+    "old:build": "npm run build:node && npm run build:browser && npm run build:logversion",
+    "old:test": "karma start",
+    "build": "tsc",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "prettier:format": "prettier --config .prettierrc '**/*.ts' --write",
+    "test": "mocha -r ts-node/register test/**/*spec.ts --insect",
+    "coverage": "nyc -r lcov -e .ts -x \"*.spec.ts\" npm run test"
   },
   "keywords": [
     "opentok",
@@ -23,38 +29,28 @@
     "video",
     "audio"
   ],
-  "author": "adrice727@gmail.com",
+  "author": "michael.jolley@vonage.com",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "*",
-    "babel-eslint": "^6.1.2",
-    "babel-plugin-espower": "^2.3.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-polyfill": "*",
-    "babel-preset-es2015": "^6.16.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.3.0",
-    "chai": "^4.1.2",
-    "eslint": "^4.18.2",
-    "eslint-config-airbnb": "^14.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.9.0",
-    "karma": "^5.0.9",
-    "karma-browserify": "^7.0.0",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.0.2",
-    "karma-firefox-launcher": "^1.3.0",
-    "karma-html2js-preprocessor": "^1.1.0",
-    "karma-mocha": "^2.0.1",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "mocha": "^4.0.1",
-    "opentok-annotation": "^2.0.55",
-    "opentok-archiving": "^1.0.19",
-    "opentok-screen-sharing": "^1.0.27",
-    "opentok-text-chat": "^1.0.30",
-    "replace": "^0.3.0"
+    "@opentok/client": "^2.18.2",
+    "@types/chai": "^4.2.12",
+    "@types/mocha": "^8.0.1",
+    "@types/node": "^14.14.6",
+    "@types/sinon": "^9.0.8",
+    "@types/sinon-chai": "^3.2.5",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
+    "chai": "^4.2.0",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "mocha": "^8.2.1",
+    "nyc": "^15.1.0",
+    "prettier": "^2.1.2",
+    "sinon": "^9.0.2",
+    "sinon-chai": "^3.5.0",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5"
   },
   "dependencies": {
     "opentok-solutions-logging": "^1.0.7"
