--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "old:build": "npm run build:node && npm run build:browser && npm run build:logversion",
     "old:test": "karma start",
     "build": "tsc",
+    "build:logversion": "replace '(js-vsol-)(x.y.z)' '$1'$npm_package_version build/*",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "prettier:format": "prettier --config .prettierrc '**/*.ts' --write",
     "test": "mocha -r ts-node/register test/**/*spec.ts --insect",
-    "coverage": "nyc -r lcov -e .ts -x \"*.spec.ts\" npm run test"
+    "coverage": "nyc mocha -r ts-node/register test/**/*spec.ts --insect",
+    "browserify:sdk": "browserify -p tinyify build/src/sdk-wrapper/sdkWrapper.js -o dist/sdk.js"
   },
   "keywords": [
     "opentok",
@@ -40,6 +42,7 @@
     "@types/sinon-chai": "^3.2.5",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
+    "browserify": "^17.0.0",
     "chai": "^4.2.0",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
@@ -49,8 +52,10 @@
     "prettier": "^2.1.2",
     "sinon": "^9.0.2",
     "sinon-chai": "^3.5.0",
+    "tinyify": "^3.0.0",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "uuid": "^8.3.1"
   },
   "dependencies": {
     "opentok-solutions-logging": "^1.0.7"
