--- a/package.json
+++ b/package.json
@@ -44,10 +44,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "mocha": "^8.2.1",
     "nyc": "^15.1.0",
-    "opentok-annotation": "^2.0.59",
-    "opentok-archiving": "^1.0.19",
-    "opentok-screen-sharing": "^1.0.34",
-    "opentok-text-chat": "^1.0.36",
+    "opentok-text-chat": "opentok/accelerator-textchat-js#typescript",
     "prettier": "^2.1.2",
     "sinon": "^9.0.2",
     "sinon-chai": "^3.5.0",
@@ -57,6 +54,6 @@
     "uuid": "^8.3.1"
   },
   "dependencies": {
-    "opentok-solutions-logging": "^1.0.7"
+    "opentok-solutions-logging": "^1.1.0"
   }
 }
