--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "test": "mocha -r ts-node/register test/**/*spec.ts --insect",
     "coverage": "nyc mocha -r ts-node/register test/**/*spec.ts --insect",
     "browserify": "npm run browserify:sdk && npm run browserify:core",
-    "browserify:core": "browserify -p tinyify build/src/core.js -o dist/core.js",
-    "browserify:sdk": "browserify -p tinyify build/src/sdk-wrapper/sdkWrapper.js -o dist/sdk.js",
+    "browserify:core": "browserify -p tinyify build/core.js -o dist/core.js",
+    "browserify:sdk": "browserify -p tinyify build/sdk-wrapper/sdkWrapper.js -o dist/sdk.js",
     "package": ""
   },
   "keywords": [
