--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,19 @@
 {
-    "env": {
-        "browser": true,
-        "es6": true,
-        "node": true
-    },
-    "extends": "airbnb",
-    "parser": "babel-eslint",
-    "rules": {
-        "no-confusing-arrow": 1,
-        "no-unused-expressions": 1,
-        "no-prototype-builtins": 1,
-        "max-len": ["error", 120]
-    },
-    "globals": {
-        "OT": true
-    }
+  "env": {
+    "browser": true,
+    "es6": true,
+    "node": true
+  },
+  "extends": "airbnb",
+  "parser": "babel-eslint",
+  "rules": {
+    "no-confusing-arrow": 1,
+    "no-unused-expressions": 1,
+    "no-prototype-builtins": 1,
+    "max-len": ["error", 120],
+    "quotes": ["error", "single"]
+  },
+  "globals": {
+    "OT": true
+  }
 }
