--- a/sample-app/.vscode/launch.json
+++ b/sample-app/.vscode/launch.json
@@ -5,8 +5,8 @@
       "name": "Chrome",
       "type": "chrome",
       "request": "launch",
-      "url": "http://localhost:3000",
-      "webRoot": "${workspaceRoot}"
+      "url": "http://localhost:4000",
+      "webRoot": "${workspaceFolder}"
     }
   ]
 }
